fixed bio alignment and fonts

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-.App {
-  text-align: center;
-}
-
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -23,22 +18,27 @@
     border: 8px;
 }
 
-.image {
-    display: flex;
-    align-self: right;
-}
 
 .bio {
-    display: flex;
-    align-items: left;
-    flex-wrap: row;
-    text-align: left;
+    font-family: georgia;
+    font-size: 1.5em;
     margin-left: 5vh;
-    max-width: 40%;
+    max-width: 55%;
 }
 
 .skills {
-    max-width: 40%;
+    font-family: roboto;
+    font-size: 1.25em;
+    max-width: 100%;
+}
+
+.image {
+    position: absolute;
+    right: 10px;
+    top: 100px;
+    width: 250px;
+    height: 250px;
+    padding: 5px;
 }
 
 li {
@@ -50,3 +50,14 @@ a {
     text-decoration: none;
 }
 
+h2 {
+    text-indent: 1em
+}
+
+h3 {
+    text-indent: 1em
+}
+
+p {
+    text-indent: 2em
+}
